Further fixing of `ingest` tests that are failing on Windows